--- a/src/css_sass/sass/main.scss
+++ b/src/css_sass/sass/main.scss
@@ -13,5 +13,6 @@
 @import "layouts/navbar";
 @import "layouts/home-header";
 @import "layouts/story";
+@import "layouts/footer";
 
 @import "pages/home";
