--- a/src/css_sass/sass/pages/_home.scss
+++ b/src/css_sass/sass/pages/_home.scss
@@ -340,6 +340,10 @@
         padding-bottom: 5rem;
     }
 
+    @include respond(md) {
+        padding-bottom: 8rem;
+    }
+
     &-container {
       @include respond(md) {
        margin-top: -4rem;
