--- a/src/css_sass/sass/main.scss
+++ b/src/css_sass/sass/main.scss
@@ -14,5 +14,7 @@
 @import "layouts/home-header";
 @import "layouts/story";
 @import "layouts/footer";
+@import "layouts/about-us-header";
 
 @import "pages/home";
+@import "pages/about-us";
