--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -192,6 +192,30 @@ body {
   font-weight: 600; }
   @media only screen and (max-width: 36em) {
     .jof-heading-tertiary-white {
+      font-size: 2rem;
+      line-height: 2.8rem; } }
+  @media only screen and (max-width: 15em) {
+    .jof-heading-tertiary-white {
+      font-size: 1.5rem;
+      line-height: 2.2rem; } }
+
+.jof-heading-tertiary-green {
+  font-size: 2.5rem;
+  font-weight: 600;
+  display: inline-block;
+  background-image: linear-gradient(to right, #54aa01, #28b485);
+  -webkit-background-clip: text;
+  color: transparent; }
+  @media only screen and (max-width: 36em) {
+    .jof-heading-tertiary-green {
+      font-size: 2rem; } }
+
+.jof-heading-tertiary-black {
+  font-size: 2.5rem;
+  color: #000;
+  font-weight: 600; }
+  @media only screen and (max-width: 36em) {
+    .jof-heading-tertiary-black {
       font-size: 2rem; } }
 
 .jof-heading-quaternary-white {
@@ -199,14 +223,14 @@ body {
   color: #fff;
   font-weight: 600; }
 
-.jof-heading-quaternary-small-white {
-  font-size: 1.6rem;
-  color: #fff;
-  font-weight: 600; }
-
 .jof-heading-quaternary-black {
   font-size: 1.8rem;
   color: #000;
+  font-weight: 600; }
+
+.jof-heading-quaternary-small-white {
+  font-size: 1.6rem;
+  color: #fff;
   font-weight: 600; }
 
 .jof-paragraph-1 {
@@ -586,17 +610,17 @@ body {
 .jof-about-us-header {
   position: relative;
   height: 100vh;
-  background-image: linear-gradient(to left bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../public/img/bpl-6-large.jpg);
+  background-image: linear-gradient(to left bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../public/img/bpl-16.jpg);
   background-size: cover;
   background-position: center; }
   @media only screen and (max-width: 36em) {
     .jof-about-us-header {
-      height: 40vh; } }
+      height: 55vh; } }
   .jof-about-us-header__row {
     position: absolute;
     width: 50%;
     top: 50%;
-    left: 10%;
+    right: 10%;
     transform: translate(-10%, -50%); }
     @media only screen and (max-width: 36em) {
       .jof-about-us-header__row {
@@ -605,6 +629,9 @@ body {
         transform: translate(-50%, -30%);
         width: 100%;
         left: 52%; } }
+    @media only screen and (max-width: 22em) {
+      .jof-about-us-header__row {
+        top: 60%; } }
   .jof-about-us-header__text-main {
     width: 100%; }
 
@@ -653,11 +680,13 @@ body {
         color: #fff; }
 
 .jof-about-us__sect-1 {
-  background-color: #f7f7f7; }
+  background-color: #f7f7f7;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px; }
   .jof-about-us__sect-1-container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding-top: 7%;
     padding-bottom: 7%;
     transition: 1s ease-out; }
@@ -668,7 +697,8 @@ body {
         padding: 10% 10%;
         padding-left: 3%; } }
   .jof-about-us__sect-1__div-1 {
-    flex: 0 1 50%;
+    flex: 0 1 30%;
+    align-self: flex-start;
     transition: 1s ease-out; }
     @media only screen and (max-width: 36em) {
       .jof-about-us__sect-1__div-1 {
@@ -685,7 +715,61 @@ body {
   .jof-about-us__sect-1__text-main {
     margin-bottom: 4rem; }
   .jof-about-us__sect-1__div-2 {
-    flex: 0 1 50%; }
+    flex: 0 1 50%;
+    margin-top: 5rem; }
     @media only screen and (max-width: 36em) {
       .jof-about-us__sect-1__div-2 {
-        flex: 0 1 100%; } }
+        flex: 0 1 100%;
+        margin-top: 0rem; } }
+
+.jof-about-us__sect-2 {
+  background-color: #f7f7f7;
+  border-radius: 8px;
+  margin-top: 2rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem; }
+  .jof-about-us__sect-2-header {
+    margin-bottom: 3rem;
+    text-align: center; }
+  .jof-about-us__sect-2-card {
+    cursor: pointer;
+    color: #54aa01;
+    transition: 0.5s ease-out; }
+    @media only screen and (max-width: 48em) {
+      .jof-about-us__sect-2-card {
+        margin-bottom: 2rem; } }
+    .jof-about-us__sect-2-card:hover {
+      color: #fff; }
+      .jof-about-us__sect-2-card:hover img {
+        transform: scale(1.15);
+        z-index: 10; }
+      .jof-about-us__sect-2-card:hover .card-body {
+        background-color: #54aa01; }
+    .jof-about-us__sect-2-card img {
+      transition: 0.5s ease-out; }
+
+.jof-about-us__sect-3 {
+  background-color: #f7f7f7;
+  border-radius: 8px;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem; }
+  .jof-about-us__sect-3-container p {
+    margin-bottom: 2rem; }
+  .jof-about-us__sect-3-header {
+    margin-bottom: 3rem; }
+    @media only screen and (max-width: 48em) {
+      .jof-about-us__sect-3-header {
+        margin-bottom: 1rem; } }
+  @media only screen and (max-width: 48em) {
+    .jof-about-us__sect-3-col-1 {
+      margin-bottom: 2rem; } }
+  .jof-about-us__sect-3-col-1 li {
+    list-style: none; }
+  .jof-about-us__sect-3-list-item::before {
+    content: "\2022";
+    color: #F68505;
+    display: inline-block;
+    width: 1em;
+    margin-left: -1em; }
