--- a/src/css_sass/sass/base/_typography.scss
+++ b/src/css_sass/sass/base/_typography.scss
@@ -125,7 +125,38 @@ body {
 
   @include respond(sm) {
     font-size: 2rem;
+    line-height: 2.8rem;
   }
+
+  @include respond(xxs) {
+    font-size: 1.5rem;
+    line-height: 2.2rem;
+  }
+}
+
+.jof-heading-tertiary-green {
+  font-size: 2.5rem;
+  font-weight: 600;
+  display: inline-block;
+  background-image: linear-gradient(to right, $color-primary, $color-primary-dark);
+  -webkit-background-clip: text;
+  color: transparent;
+
+  @include respond(sm) {
+    font-size: 2rem;
+  }
+
+}
+
+.jof-heading-tertiary-black {
+  font-size: 2.5rem;
+  color: $color-black;
+  font-weight: 600;
+
+  @include respond(sm) {
+    font-size: 2rem;
+  }
+
 }
 
 .jof-heading-quaternary-white {
@@ -134,15 +165,15 @@ body {
   font-weight: 600;
 }
 
-.jof-heading-quaternary-small-white {
-  font-size: 1.6rem;
-  color: $color-white;
-  font-weight: 600;
-}
-
 .jof-heading-quaternary-black {
   font-size: 1.8rem;
   color: $color-black;
+  font-weight: 600;
+}
+
+.jof-heading-quaternary-small-white {
+  font-size: 1.6rem;
+  color: $color-white;
   font-weight: 600;
 }
 
