our service page completed

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -606,6 +606,9 @@ body {
       display: none; } }
   .jof-footer__logo {
     height: 13rem; }
+  @media only screen and (max-width: 15em) {
+    .jof-footer__mailto {
+      font-size: 1.2rem; } }
 
 .jof-about-us-header {
   position: relative;
@@ -637,6 +640,28 @@ body {
     text-align: center; }
     @media only screen and (max-width: 36em) {
       .jof-about-us-header__text-main {
+        text-align: initial; } }
+
+.jof-our-services-header {
+  position: relative;
+  height: 100vh;
+  background-image: linear-gradient(to left bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../public/img/bpl-21.jpg);
+  background-size: cover;
+  background-position: bottom; }
+  @media only screen and (max-width: 36em) {
+    .jof-our-services-header {
+      height: 55vh; } }
+  .jof-our-services-header__row {
+    position: absolute;
+    width: 50%;
+    top: 10%;
+    left: 10%;
+    transform: translate(-10%, -10%); }
+  .jof-our-services-header__text-main {
+    width: 100%;
+    text-align: center; }
+    @media only screen and (max-width: 36em) {
+      .jof-our-services-header__text-main {
         text-align: initial; } }
 
 .jof-home__sect-1 {
@@ -777,3 +802,23 @@ body {
     display: inline-block;
     width: 1em;
     margin-left: -1em; }
+
+.jof-our-services__sect-1 {
+  background-color: #f7f7f7;
+  border-radius: 8px;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem; }
+  @media only screen and (max-width: 48em) {
+    .jof-our-services__sect-1 {
+      padding-bottom: 2rem; } }
+  @media only screen and (max-width: 48em) {
+    .jof-our-services__sect-1-col {
+      margin-bottom: 2rem; } }
+  .jof-our-services__sect-1-text-sub {
+    letter-spacing: 0.5rem;
+    color: #54aa01;
+    margin-bottom: 3rem; }
+  .jof-our-services__sect-1-text-main {
+    margin-bottom: 2rem; }
