--- a/src/css_sass/sass/main.scss
+++ b/src/css_sass/sass/main.scss
@@ -15,6 +15,8 @@
 @import "layouts/story";
 @import "layouts/footer";
 @import "layouts/about-us-header";
+@import "layouts/our-services-header";
 
 @import "pages/home";
 @import "pages/about-us";
+@import "pages/our-services";
