--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -832,9 +832,43 @@ body {
   .jof-contact-us__sect-1-header {
     margin-bottom: 2rem;
     text-align: center; }
-  .jof-contact-us__sect-1-img-2 {
-    border-bottom: 6rem outset #54aa01;
+  .jof-contact-us__sect-1-img-1 {
+    cursor: pointer;
+    transition: .6s ease-out; }
+    .jof-contact-us__sect-1-img-1:hover {
+      transform: scale(1.02); }
+      .jof-contact-us__sect-1-img-1:hover .jof-contact-us__sect-1-col-1-text {
+        margin-left: 4rem; }
+  .jof-contact-us__sect-1-col-1-row-2 {
+    transition: .6s ease-out; }
+  .jof-contact-us__sect-1-col-1-row-1:hover ~ .jof-contact-us__sect-1-col-1-row-2 {
+    margin-left: 6rem; }
+  .jof-contact-us__sect-1-col-1-text {
+    letter-spacing: 0.5rem;
+    color: #54aa01; }
+  .jof-contact-us__sect-1-col-2 {
     margin-left: 3rem; }
     @media only screen and (max-width: 36em) {
-      .jof-contact-us__sect-1-img-2 {
+      .jof-contact-us__sect-1-col-2 {
         margin-left: 0; } }
+  .jof-contact-us__sect-1-box {
+    background-color: #54aa01;
+    text-align: center;
+    padding: 2rem 0;
+    cursor: pointer;
+    color: #fff;
+    transition: .6s ease-out; }
+    .jof-contact-us__sect-1-box h2 {
+      color: #fff; }
+    .jof-contact-us__sect-1-box i {
+      font-size: 2rem;
+      margin-left: 6rem;
+      visibility: hidden;
+      opacity: 0;
+      transition: .6s ease-out; }
+    .jof-contact-us__sect-1-box:hover {
+      background-color: rgba(84, 170, 1, 0.7); }
+      .jof-contact-us__sect-1-box:hover i {
+        margin-left: 2rem;
+        visibility: visible;
+        opacity: 1; }
