--- a/src/css_sass/sass/main.scss
+++ b/src/css_sass/sass/main.scss
@@ -8,6 +8,7 @@
 
 @import "components/btn";
 @import "components/composition";
+@import "components/map";
 
 @import "layouts/header";
 @import "layouts/navbar";
