--- a/src/css_sass/sass/main.scss
+++ b/src/css_sass/sass/main.scss
@@ -9,6 +9,7 @@
 @import "components/btn";
 @import "components/composition";
 @import "components/map";
+@import "components/popup-contact-form";
 
 @import "layouts/header";
 @import "layouts/navbar";
